# Openev-qua-tumark-finops

./: .dockerignore  Dockerfile  PRE_SUBMISSION_CHECKLIST.md  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py
src/: env.py  models.py
tests/: test_env.py
